<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_research"
            android:icon="@drawable/ic_oval_research"
            android:title="@string/research"/>
        <item
            android:id="@+id/nav_memebers"
            android:icon="@drawable/ic_oval_members"
            android:title="@string/members"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_oval_gallery"
            android:title="@string/gallery"/>
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_oval_notice"
            android:title="@string/notice"/>
        <item
            android:id="@+id/nav_bulletin_board"
            android:icon="@drawable/ic_oval_bulletin_board"
            android:title="@string/bulletin_board"/>
    </group>
</menu>